chore(backend): Avoid immutable Lists